--- a/selector4.html
+++ b/selector4.html
@@ -3,15 +3,15 @@
 
 <head>
     <title>Pseudo elements</title>
-    <link rel="stylesheet" type="text/css" href="selectors4.css">
+    <link rel="stylesheet" type="text/css" href="selector4.css">
 </head>
 
 <body>
 
-    <p class="before">
 
-        Winc Academy is awesomesauce
-    </p>
+
+    <h1>Winc Academy is Awesome</h1>
+
 
 </body>
 
